# couchbaselib

./: ChangeLog.md  README.md  couchbaselib.cabal
docker/: Dockerfile  db_setup.sh  docker-compose.yml
include/: couchbaseWrapper.c  couchbaseWrapper.h
src/: Couchbase.hs  LcbStatus.hs
test/: Spec.hs
