cabal-version: 1.12

name:           couchbaselib
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/couchbaselib#readme>
homepage:       https://github.com/sdrubolo/couchbaselib#readme
bug-reports:    https://github.com/sdrubolo/couchbaselib/issues
author:         Gianluca Sant
maintainer:     gianluca.snt@gmail.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/sdrubolo/couchbaselib

library
  exposed-modules:
      Couchbase
      LcbStatus
  other-modules:
      Paths_couchbaselib
  hs-source-dirs:
      src
  c-sources: include/couchbaseWrapper.c
  build-depends:
      base >=4.7 && <5,
      bytestring,
      text,
      aeson
  default-language: Haskell2010
  extra-libraries: couchbase


test-suite couchbaselib-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_couchbaselib
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5,
      bytestring,
      hspec,
      random-strings,
      couchbaselib,
      text,
      binary,
      containers,
      parallel
  default-language: Haskell2010
